--- a/MyFirstApp/AndroidManifest.xml
+++ b/MyFirstApp/AndroidManifest.xml
@@ -21,5 +21,7 @@
         
         <activity android:name="com.example.myapp.DisplayMessageActivity" />
     </application>
+    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
